--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile --extra=dev --output-file=requirements.txt pyproject.toml
 #
+alembic==1.10.2
+    # via fastapi-demo (pyproject.toml)
 anyio==3.6.2
     # via
     #   httpcore
@@ -23,6 +25,8 @@ dnspython==2.3.0
     # via email-validator
 email-validator==1.3.1
     # via fastapi
+environs==9.5.0
+    # via fastapi-demo (pyproject.toml)
 fastapi[all]==0.95.0
     # via fastapi-demo (pyproject.toml)
 greenlet==2.0.2
@@ -46,14 +50,22 @@ itsdangerous==2.1.2
     # via fastapi
 jinja2==3.1.2
     # via fastapi
+mako==1.2.4
+    # via alembic
 markupsafe==2.1.2
-    # via jinja2
+    # via
+    #   jinja2
+    #   mako
+marshmallow==3.19.0
+    # via environs
 mypy-extensions==1.0.0
     # via black
 orjson==3.8.8
     # via fastapi
 packaging==23.0
-    # via black
+    # via
+    #   black
+    #   marshmallow
 pathspec==0.11.1
     # via black
 platformdirs==3.1.1
@@ -61,7 +73,9 @@ platformdirs==3.1.1
 pydantic==1.10.7
     # via fastapi
 python-dotenv==1.0.0
-    # via uvicorn
+    # via
+    #   environs
+    #   uvicorn
 python-multipart==0.0.6
     # via fastapi
 pyyaml==6.0
@@ -78,11 +92,14 @@ sniffio==1.3.0
     #   httpcore
     #   httpx
 sqlalchemy==2.0.7
-    # via fastapi-demo (pyproject.toml)
+    # via
+    #   alembic
+    #   fastapi-demo (pyproject.toml)
 starlette==0.26.1
     # via fastapi
 typing-extensions==4.5.0
     # via
+    #   alembic
     #   pydantic
     #   sqlalchemy
 ujson==5.7.0
