--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,6 @@ dnspython==2.3.0
     # via email-validator
 email-validator==1.3.1
     # via fastapi
-environs==9.5.0
-    # via fastapi-demo (pyproject.toml)
 fastapi[all]==0.95.0
     # via fastapi-demo (pyproject.toml)
 greenlet==2.0.2
@@ -56,16 +54,12 @@ markupsafe==2.1.2
     # via
     #   jinja2
     #   mako
-marshmallow==3.19.0
-    # via environs
 mypy-extensions==1.0.0
     # via black
 orjson==3.8.8
     # via fastapi
 packaging==23.0
-    # via
-    #   black
-    #   marshmallow
+    # via black
 pathspec==0.11.1
     # via black
 platformdirs==3.1.1
@@ -73,9 +67,7 @@ platformdirs==3.1.1
 pydantic==1.10.7
     # via fastapi
 python-dotenv==1.0.0
-    # via
-    #   environs
-    #   uvicorn
+    # via uvicorn
 python-multipart==0.0.6
     # via fastapi
 pyyaml==6.0
