--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,8 @@ anyio==3.6.2
     #   httpcore
     #   starlette
     #   watchfiles
+attrs==22.2.0
+    # via pytest
 black==23.1.0
     # via fastapi-demo (pyproject.toml)
 certifi==2022.12.7
@@ -44,6 +46,8 @@ idna==3.4
     #   anyio
     #   email-validator
     #   rfc3986
+iniconfig==2.0.0
+    # via pytest
 itsdangerous==2.1.2
     # via fastapi
 jinja2==3.1.2
@@ -59,13 +63,19 @@ mypy-extensions==1.0.0
 orjson==3.8.8
     # via fastapi
 packaging==23.0
-    # via black
+    # via
+    #   black
+    #   pytest
 pathspec==0.11.1
     # via black
 platformdirs==3.1.1
     # via black
+pluggy==1.0.0
+    # via pytest
 pydantic==1.10.7
     # via fastapi
+pytest==7.2.2
+    # via fastapi-demo (pyproject.toml)
 python-dotenv==1.0.0
     # via uvicorn
 python-multipart==0.0.6
@@ -83,7 +93,7 @@ sniffio==1.3.0
     #   anyio
     #   httpcore
     #   httpx
-sqlalchemy==2.0.7
+sqlalchemy==1.4.41
     # via
     #   alembic
     #   fastapi-demo (pyproject.toml)
@@ -93,7 +103,6 @@ typing-extensions==4.5.0
     # via
     #   alembic
     #   pydantic
-    #   sqlalchemy
 ujson==5.7.0
     # via fastapi
 uvicorn[standard]==0.21.1
