--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ name = "fastapi-demo"
 version = "1.0"
 dependencies = [
     "fastapi[all]",
-    "sqlalchemy",
+    "sqlmodel",
     "alembic",
 ]
 
